--- a/running/index.html
+++ b/running/index.html
@@ -32,10 +32,9 @@
                     <li><input class="route" type="checkbox" value="White_rose_ultra_2022.gpx" data-colour="#ff4000">White Rose Ultra (2022) New Route</input></li>
                     <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                     <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
-                    <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
+                    <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>                 
                     <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                     <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
-
                     <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
                     <li><input class="route" type="checkbox" value="south_downs_100.gpx" data-colour="#ff4000">South Downs 100</input></li>
                     <li><input class="route" type="checkbox" value="TheLine.gpx" data-colour="#80ff00">The Line</input></li>
@@ -45,6 +44,9 @@
 
                 <div class="sectionHeader">Exploring</div>
                 <ul>
+                    <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
+                    <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
+
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
                     <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
@@ -57,6 +59,7 @@
                     <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
                     <li><input class="route" type="checkbox" value="Dales_high_way_to_Skipton_and_the_Leeds_Liverpool_canal_back.xml" data-colour="#ff8000">Dales High way to Skipton loop</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_ringway.gpx" data-colour="#00bfff">Harrogate Ringway (Clockwise)</input></li>
+                    <li><input class="route" type="checkbox" value="Knaresborough_round.gpx" data-colour="#00bfff">Knaresborough Round (Plus Ringway)</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part1.gpx" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
