--- a/running/index.html
+++ b/running/index.html
@@ -65,6 +65,7 @@
                     <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
                     <li><input class="route" type="checkbox" value="rochdale_canal.gpx" data-colour="#8000ff">Manchester to Hebden Bridge (Rochdale Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
+                    <li><input class="route" type="checkbox" value="Barnsley_to_Bradford_via_Emley_moor.gpx" data-colour="#40ff00">Barnsley to Bradford via Emley moor</input></li>
                     
                 </ul>                
 
