Use correct file

--- a/running/index.html
+++ b/running/index.html
@@ -66,7 +66,7 @@
                     <li><input class="route" type="checkbox" value="rochdale_canal.gpx" data-colour="#8000ff">Manchester to Hebden Bridge (Rochdale Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Barnsley_to_Bradford_via_Emley_moor.gpx" data-colour="#40ff00">Barnsley to Bradford via Emley moor</input></li>
-                    <li><input class="route" type="checkbox" value="daleswaylinkbradford.gpx" data-colour="#40ff00">`Bradford to Skipton via Bolton Abbey</input></li>
+                    <li><input class="route" type="checkbox" value="Bradford_to_Skipton_via_Appletreewick.gpx" data-colour="#40ff00">`Bradford to Skipton via Bolton Abbey</input></li>
                 </ul>                
 
                 <div class="sectionHeader">England Coast Path</div>
