--- a/running/index.html
+++ b/running/index.html
@@ -40,6 +40,8 @@
                     <li><input class="route" type="checkbox" value="TheLine.gpx" data-colour="#80ff00">The Line</input></li>
                     <li><input class="route" type="checkbox" value="aWhiteHorse100miles2023.gpx" data-colour="#80ff00">White Horse 100</input></li>                
                     <li><input class="route" type="checkbox" value="DW100FullRoute-2022.gpx" data-colour="#8000ff">Dartmoor 100</input></li>
+                    <li><input class="route" type="checkbox" value="BigBen_To_Kingston.gpx" data-colour="#ff4000">Big Ben to Kingston</input></li>
+                    <li><input class="route" type="checkbox" value="Kingston_To_Brighton.gpx" data-colour="#8000ff">Kingston To Brighton</input></li>
                 </ul>
 
                 <div class="sectionHeader">Exploring</div>
