--- a/running/index.html
+++ b/running/index.html
@@ -69,6 +69,7 @@
                     <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Barnsley_to_Bradford_via_Emley_moor.gpx" data-colour="#40ff00">Barnsley to Bradford via Emley moor</input></li>
                     <li><input class="route" type="checkbox" value="Bradford_to_Skipton_via_Appletreewick.gpx" data-colour="#40ff00">Bradford to Skipton via Bolton Abbey</input></li>
+                    <li><input class="route" type="checkbox" value="Mytholmroyd_to_Leeds_via_Haworth_and_Bingley.gpx" data-colour="#0080ff">Mytholmroyd to Leeds via Haworth and Bingley</input></li>
                 </ul>                
 
                 <div class="sectionHeader">England Coast Path</div>
