--- a/running/index.html
+++ b/running/index.html
@@ -23,11 +23,18 @@
                     <li><input class="route" type="checkbox" value="Cleveland_Way.xml" data-colour="#80ff00">Cleveland Way (Lots of times)</input></li>
                 </ul>
 
+                <div class="sectionHeader">Canals</div>
+                <ul>
+                    <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
+                    <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
+                    <li><input class="route" type="checkbox" value="GrandUnionCanalRace.gpx" data-colour="#ffbf00">Grand Union Canal Race (2024)</input></li>
+                    <li><input class="route" type="checkbox" value="rochdale_canal.gpx" data-colour="#8000ff">Manchester to Hebden Bridge (Rochdale Canal)</input></li>
+                    <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
+                </ul>
+
                 <div class="sectionHeader">Other races</div>
                 <ul>
                     <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
-                    <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
-                    <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
                     <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                     <li><input class="route" type="checkbox" value="White_rose_ultra_2022.gpx" data-colour="#ff4000">White Rose Ultra (2022) New Route</input></li>
                     <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
@@ -48,7 +55,6 @@
                 <ul>
                     <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
-
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
                     <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
@@ -65,8 +71,6 @@
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part1.gpx" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
-                    <li><input class="route" type="checkbox" value="rochdale_canal.gpx" data-colour="#8000ff">Manchester to Hebden Bridge (Rochdale Canal)</input></li>
-                    <li><input class="route" type="checkbox" value="Manchester_to_Huddersfield_Huddersfield_narrow_canal.gpx" data-colour="#80ff00">Manchester to Huddersfield (Huddersfield Narrow Canal)</input></li>
                     <li><input class="route" type="checkbox" value="Barnsley_to_Bradford_via_Emley_moor.gpx" data-colour="#40ff00">Barnsley to Bradford via Emley moor</input></li>
                     <li><input class="route" type="checkbox" value="Bradford_to_Skipton_via_Appletreewick.gpx" data-colour="#40ff00">Bradford to Skipton via Bolton Abbey</input></li>
                     <li><input class="route" type="checkbox" value="Mytholmroyd_to_Leeds_via_Haworth_and_Bingley.gpx" data-colour="#0080ff">Mytholmroyd to Leeds via Haworth and Bingley</input></li>
