--- a/running/index.html
+++ b/running/index.html
@@ -70,6 +70,7 @@
                     <li><input class="route" type="checkbox" value="Knaresborough_round.gpx" data-colour="#00bfff">Knaresborough Round (Plus Ringway)</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part1.gpx" data-colour="#ff0000">Hadrian's Wall Day 1</input></li>
                     <li><input class="route" type="checkbox" value="Hadrians_wall_part2.gpx" data-colour="#ff0000">Hadrian's Wall Day 2</input></li>
+                    <li><input class="route" type="checkbox" value="Huddersfield_Holmfirth_Wakefield.gpx" data-colour="#00bfff">Huddersfield to Holmfirth to Wakefield</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_to_Leeds_via_Ilkley_moor.gpx" data-colour="#ff0000">Harrogate to Leeds via Ilkley Moor</input></li>
                     <li><input class="route" type="checkbox" value="Barnsley_to_Bradford_via_Emley_moor.gpx" data-colour="#40ff00">Barnsley to Bradford via Emley moor</input></li>
                     <li><input class="route" type="checkbox" value="Bradford_to_Skipton_via_Appletreewick.gpx" data-colour="#40ff00">Bradford to Skipton via Bolton Abbey</input></li>
