--- a/l2b4/index.html
+++ b/l2b4/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id="map"></div>
+    <div id='fullScreenInfo'></div>
     <script type='text/javascript' src='l2b4.js'></script>
 </body>
 
