--- a/running/index.html
+++ b/running/index.html
@@ -53,8 +53,10 @@
 
                 <div class="sectionHeader">Exploring</div>
                 <ul>
-                    <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
+                    <li><input class="route" type="checkbox" value="York_Ripon_Knaresbrough.gpx" data-colour="#00bfff">York to Knaresborough (Via Ripon)</input></li>
+                    <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff8000">York to Knaresborough (Via Wetherby)</input></li>
+                    <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
                     <li><input class="route" type="checkbox" value="Leeds_to_York.xml" data-colour="#ff0000">Leeds to York (Aire and Calder Navigation)</input></li>
