--- a/running/index.html
+++ b/running/index.html
@@ -40,6 +40,7 @@
                     <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                     <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
                     <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>                 
+                    <li><input class="route" type="checkbox" value="efm_2024.xml" data-colour="#8000ff">Meriden to Bristol (Escape From Meriden 2024)</input></li>                 
                     <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                     <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
                     <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
@@ -54,8 +55,9 @@
                 <div class="sectionHeader">Exploring</div>
                 <ul>
                     <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
-                    <li><input class="route" type="checkbox" value="York_Ripon_Knaresbrough.gpx" data-colour="#00bfff">York to Knaresborough (Via Ripon)</input></li>
-                    <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff8000">York to Knaresborough (Via Wetherby)</input></li>
+                    <li><input class="route" type="checkbox" value="York_Ripon_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Ripon)</input></li>
+                    <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Wether)</input></li>
+
                     <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
