--- a/running/index.html
+++ b/running/index.html
@@ -40,7 +40,7 @@
                     <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                     <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
                     <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>                 
-                    <li><input class="route" type="checkbox" value="efm_2024.xml" data-colour="#8000ff">Meriden to Bristol (Escape From Meriden 2024)</input></li>                 
+                    <li><input class="route" type="checkbox" value="efm_2024.gpx" data-colour="#8000ff">Meriden to Bristol (Escape From Meriden 2024)</input></li>                 
                     <li><input class="route" type="checkbox" value="1066.xml" data-colour="#8000ff">1066</input></li>
                     <li><input class="route" type="checkbox" value="ArcOfAttrition.xml" data-colour="#8000ff">Arc of Attrition</input></li>
                     <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
