--- a/index.html
+++ b/index.html
@@ -41,19 +41,36 @@
                 <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
                 <li><a href="https://yorkdevelopers.org">York Developers</a></li>
                 <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
+                <li><a href="https://www.linkedin.com/in/dbetteridge/">My Linked account</a></li>
                 <li><a href="/resources">Some useful resources</a></li>
             </ul>
         </div>
         <div class="item-content">
             <div class="content-container">
-                <p>I work as a Senior Technical Architect for a startup called <a href="https://zeromission.io">ZeroMission.</a> We use a range of technolgies which include C#, Postgres, AWS, and React.js.</p>
 
+<h2>Employment</h2>
 
-<p>Prior to working at Hivemap, I worked for several years for the Proactis Group producing
+<p>I currently work as a Senior Software Developer for a startup called <a href="https://zeromission.io">ZeroMission.</a> which creates software for EV Fleet management.
+We use a range of technolgies which include C#, Postgres, AWS, and React.js.</p>
+
+<h3>Past Employment</h3>
+
+<p>For several years I was employed by the Proactis Group, developing
 e-procurement software. During this time I provided solutions for a range of global companies including universities, large charities, city banks, and housing trusts.</p>
+
+<p>After Proactis,  I joined a very small startup called Hivemap which researched and developed predictive planning software for construction projects. </p>
+
+<br><hr><br>
+
+<h2>York Developers</h2>
+
 <p>I am a co-founder of the York Developers charity, which arranges technical meetups and events in York.
 These include a monthly Code Dojo where attendees pair up and work on a new problem each month.</p>
-<p>I have spoken a number of times at community usergroups 
+<p>I have spoken a number of times at community usergroups on a range of topics from 'Type Systems in Languages' to the internals of 'Microsoft SQL Server'
+
+<br><hr><br>
+
+<h2>Sport</h2>
 In my free time I'm a keen runner and have competed in several ultra-marathons.  These include 'The Line', the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.  More information about my running can be found <a href="/running/">here</a>.</p>
             </div>
         </div>
