--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
                 <li><a href="/target_files/blogs.html">My blog</a></li>
                 <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
                 <li><a href="https://yorkdevelopers.org">York Developers</a></li>
-                <li><a href="https://github.com/DavidBetteridge">My github account</a></li>
-                <li><a href="https://www.linkedin.com/in/dbetteridge/">My Linked account</a></li>
+  
                 <li><a href="/resources">Some useful resources</a></li>
+            </ul>
+
+            <p>Contact Me</p>
+            <ul>
+                <li><a href="https://github.com/DavidBetteridge">On GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/dbetteridge/">On Linked-in</a></li>
+                <li><a href="https://bsky.app/profile/davidbetteridge.net">On BlueSky</a></li>
             </ul>
         </div>
         <div class="item-content">
