Brussels to Paris

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="/target_files/about.html">About me</a></li>
                 <li><a href="/target_files/running.html">My running</a></li>
                 <li><a href="/target_files/london_to_paris.html">London to Paris</a></li>
+                <li><a href="/brussels_to_paris/index.html">Brussels to Paris</a></li>
                 <li><a href="/familybikerides/index.html">Family bike rides</a></li>
                 <li><a href="/target_files/blogs.html">My blog</a></li>
                 <li><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a></li>
