--- a/brussels_to_paris/index.html
+++ b/brussels_to_paris/index.html
@@ -24,13 +24,13 @@
                 <li><input class="route" type="checkbox" value="Brussels_to_Paris_Day_1.gpx"
                         data-colour="#ff0000">Day 1 - Brussels to Hotel in Ottignies-Louvain-la-Neuve</input></li>
                 <li><input class="route" type="checkbox" value="Brussels_to_Paris_Day_2.gpx"
-                        data-colour="#ff8000">Day 2 - Ottignies-Louvain-la-Neuve to Campsite in Semeries</input></li>
+                        data-colour="#ff0000">Day 2 - Ottignies-Louvain-la-Neuve to Campsite in Semeries</input></li>
                 <li><input class="route" type="checkbox" value="Brussels_to_Paris_Day_3.gpx"
-                        data-colour="#ffbf00">Day 3 - Semeries to Campsite in Etreaupont</input></li>
+                        data-colour="#ff0000">Day 3 - Semeries to Campsite in Etreaupont</input></li>
                 <li><input class="route" type="checkbox" value="Brussels_to_Paris_Day_4.gpx"
-                        data-colour="#ffff00">Day 4 - Etreaupont to Hotel in Compiegne</input></li>
+                        data-colour="#ff0000">Day 4 - Etreaupont to Hotel in Compiegne</input></li>
                 <li><input class="route" type="checkbox" value="Brussels_to_Paris_Day_5.gpx"
-                        data-colour="#bbffbb">Day 5 - Compiegne to Campsite in Paris</input></li>                        
+                        data-colour="#ff0000">Day 5 - Compiegne to Campsite in Paris</input></li>                        
             </ul>
         </div>
 
