--- a/secret/index.html
+++ b/secret/index.html
@@ -21,6 +21,7 @@
     <div id="map"></div>
      <script type='text/javascript' src='TheLine.js'></script>
      <script type='text/javascript' src='mcdonalds.js'></script>
+     <script type='text/javascript' src='spoons.js'></script>
      <script type='text/javascript' src='line.js'></script>
   </body>
 </html>
