--- a/secret/index.html
+++ b/secret/index.html
@@ -22,6 +22,7 @@
      <script type='text/javascript' src='TheLine.js'></script>
      <script type='text/javascript' src='mcdonalds.js'></script>
      <script type='text/javascript' src='spoons.js'></script>
+     <script type='text/javascript' src='bk.js'></script>
      <script type='text/javascript' src='line.js'></script>
   </body>
 </html>
