--- a/running/index.html
+++ b/running/index.html
@@ -4,12 +4,23 @@
         <title>MyRuns - David Betteridge</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
         <link rel="stylesheet" type="text/css" href="running.css">
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+            integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+            crossorigin=""
+            />
+        <script
+            src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin="">
+        </script>
     </head>
     <body>
 
         <div class="row">
 
-            <div class="column" id='myMap' style='height: 100vh;'></div>
+            <div class="column" id='map' style='height: 100vh;'></div>
 
             <div class="column" id='printoutPanel'>
 
@@ -34,6 +45,8 @@
 
                 <div class="sectionHeader">Other races</div>
                 <ul>
+                    
+                    <li><input class="route" type="checkbox" value="cardiff_to_london_ultimate_final_master.gpx" data-colour="#bfff00">Cardiff to London</input></li>
                     <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
                     <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                     <li><input class="route" type="checkbox" value="White_rose_ultra_2022.gpx" data-colour="#ff4000">White Rose Ultra (2022) New Route</input></li>
