--- a/running/index.html
+++ b/running/index.html
@@ -46,7 +46,7 @@
                 <div class="sectionHeader">Other races</div>
                 <ul>
                     
-                    <li><input class="route" type="checkbox" value="cardiff_to_london_ultimate_final_master.gpx" data-colour="#bfff00">Cardiff to London</input></li>
+                    <li><input class="route" type="checkbox" value="cardiff_to_london_ultimate_final_master.gpx" data-colour="#bfff00">Cardiff to London (DNF at Goring)</input></li>
                     <li><input class="route" type="checkbox" value="Spine2018.xml" data-colour="#bfff00">Spine Race (2018)</input></li>
                     <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
                     <li><input class="route" type="checkbox" value="White_rose_ultra_2022.gpx" data-colour="#ff4000">White Rose Ultra (2022) New Route</input></li>
@@ -67,10 +67,11 @@
 
                 <div class="sectionHeader">Exploring</div>
                 <ul>
+                    <li><input class="route" type="checkbox" value="Pickering_to_Whitby.gpx" data-colour="#ff0000">Pickering to Whitby</input></li>
+                    <li><input class="route" type="checkbox" value="Pickering_to_York.gpx" data-colour="#0080ff">Pickering to York</input></li>
                     <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
                     <li><input class="route" type="checkbox" value="York_Ripon_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Ripon)</input></li>
                     <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Wether)</input></li>
-
                     <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
@@ -96,6 +97,8 @@
 
                 <div class="sectionHeader">England Coast Path</div>
                 <ul>
+                    <li><input class="route" type="checkbox" value="Berwick_to_Alnmouth.gpx" data-colour="#ff8000">Berwick to Alnmouth</input></li>
+                    <li><input class="route" type="checkbox" value="Alnmouth_to_Sunderland.gpx" data-colour="#00bfff">Alnmouth to Sunderland</input></li>
                     <li><input class="route" type="checkbox" value="Newcastle_to_Seaham.gpx" data-colour="#8000ff">Newcastle to Seaham</input></li>
                     <li><input class="route" type="checkbox" value="Saltburn_to_Horden.gpx" data-colour="#8000ff">Saltburn to Horden</input></li>
                     <li><input class="route" type="checkbox" value="Saltburn_to_Scarborough.gpx" data-colour="#8000ff">Saltburn to Scarborough</input></li>
