--- a/running/index.html
+++ b/running/index.html
@@ -71,7 +71,7 @@
                     <li><input class="route" type="checkbox" value="Pickering_to_York.gpx" data-colour="#0080ff">Pickering to York</input></li>
                     <li><input class="route" type="checkbox" value="York_to_Harrogate.gpx" data-colour="#ff0000">York to Harrogate (Aerospace Way)</input></li>
                     <li><input class="route" type="checkbox" value="York_Ripon_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Ripon)</input></li>
-                    <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Wether)</input></li>
+                    <li><input class="route" type="checkbox" value="York_Wetherby_Knaresbrough.gpx" data-colour="#ff0000">York to Knaresborough (Via Wetherby)</input></li>
                     <li><input class="route" type="checkbox" value="End_of_my_previous_EFM_attempt_to_home.gpx" data-colour="#0040ff">Escape From Meriden to Home</input></li>
                     <li><input class="route" type="checkbox" value="Selby_to_Leeds.xml" data-colour="#00bfff">Selby To Leeds</input></li>
                     <li><input class="route" type="checkbox" value="Marsden_to_Hebden_Bridge_the_other_way.gpx" data-colour="#ff0000">Marsden to Hebden Bridge along canals</input></li>
