--- a/kendra/map.html
+++ b/kendra/map.html
@@ -45,7 +45,8 @@
                 <ul>
                     <li><input class="route" type="checkbox" value="Berwick_to_Alnmouth.gpx" data-colour="#ff8000">Berwick to Alnmouth</input></li>
                     <li><input class="route" type="checkbox" value="Alnmouth_to_Sunderland.gpx" data-colour="#00bfff">Alnmouth to Sunderland</input></li>
-                </ul>    
+                    <li><input class="route" type="checkbox" value="Sunderland_to_Redcar.gpx" data-colour="#ff4000">Sunderland to Redcar</input></li>
+              </ul>    
 
 
             </div>
