--- a/running/index.html
+++ b/running/index.html
@@ -99,6 +99,7 @@
                 <ul>
                     <li><input class="route" type="checkbox" value="Berwick_to_Alnmouth.gpx" data-colour="#ff8000">Berwick to Alnmouth</input></li>
                     <li><input class="route" type="checkbox" value="Alnmouth_to_Sunderland.gpx" data-colour="#00bfff">Alnmouth to Sunderland</input></li>
+                    <li><input class="route" type="checkbox" value="Sunderland_to_Redcar.gpx" data-colour="#ff4000">Sunderland to Redcar</input></li>
                     <li><input class="route" type="checkbox" value="Newcastle_to_Seaham.gpx" data-colour="#8000ff">Newcastle to Seaham</input></li>
                     <li><input class="route" type="checkbox" value="Saltburn_to_Horden.gpx" data-colour="#8000ff">Saltburn to Horden</input></li>
                     <li><input class="route" type="checkbox" value="Saltburn_to_Scarborough.gpx" data-colour="#8000ff">Saltburn to Scarborough</input></li>
