--- a/running/index.html
+++ b/running/index.html
@@ -60,6 +60,7 @@
                     <li><input class="route" type="checkbox" value="The_Peak_District_100_2022.gpx" data-colour="#ff4000">Peak District 100</input></li>
                     <li><input class="route" type="checkbox" value="south_downs_100.gpx" data-colour="#ff4000">South Downs 100</input></li>
                     <li><input class="route" type="checkbox" value="TheLine.gpx" data-colour="#80ff00">The Line</input></li>
+                    <li><input class="route" type="checkbox" value="TheWinterLine2026.gpx" data-colour="#bfff00">The Winter Line 2026</input></li>
                     <li><input class="route" type="checkbox" value="aWhiteHorse100miles2023.gpx" data-colour="#80ff00">White Horse 100</input></li>                
                     <li><input class="route" type="checkbox" value="DW100FullRoute-2022.gpx" data-colour="#8000ff">Dartmoor 100</input></li>
                     <li><input class="route" type="checkbox" value="BigBen_To_Kingston.gpx" data-colour="#ff4000">Big Ben to Kingston</input></li>
